updated image, fixed background

--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
         <hr>
         <div class="content">
             <section class="mainSection">
-                <div class="col-pic">
-                    <video id="clip" autoplay loop>
-                        <source src="assets/images/stage.mp4" type="video/mp4">
+                <div class="col-pic" id="stage">
+                    <img source src="assets/images/stage.png" alt="">
+                </div>
+                <div class="col-pic" id="clip">
+                    <video  autoplay loop>
+                        <source src="assets/images/hanged.mp4" type="video/mp4">
                     </video>
                 </div>
             </section>
